[workspace]

members = [
    "p13_roman_to_integer",
    "p997_find_the_town_judge",
    "p909_snakes_and_ladders",
    "p28_find_the_index_of_the_first_occurrence_in_a_string",
    "p2187_minimum_time_to_complete_trips",
    "p2235_add_two_integers",
    "p2236_root_equals_sum_of_children",
    "p226_invert_binary_tree",
    "p1480_running_sum_of_1d_array",
    "p1672_richest_customer_wealth",
    "p412_fizz_buzz",
    "p1342_number_of_steps_to_reduce_a_number_to_zero",
    "p876_middle_of_the_linked_list",
    "p383_ransom_note",
    "p1_two_sum",
    "p392_is_subsequence",
    "icc_reverse_string",
    "icc_squares_of_a_sorted_array",
    "p713_subarray_product_less_than_k",
    "icc_maximum_average_subarray_i",
    "icc_max_consecutive_ones_iii",
    "p2270_number_of_ways_to_split_array",
    "icc_running_sum_of_1d_array",
    "icc_minimum_value_to_get_positive_step_by_step_sum",
    "p557_reverse_words_in_a_string_iii",
    "p917_reverse_only_letters",
    "p2351_first_letter_to_appear_twice",
    "icc_check_if_the_sentence_is_pangram",
    "icc_missing_number",
    "icc_counting_elements",
    "p2248_intersection_of_multiple_arrays",
    "p1941_check_if_all_characters_have_equal_number_of_occurrences",
    "p560_subarray_sum_equals_k",
    "p1248_count_number_of_nice_subarrays",
    "icc_find_players_with_zero_or_one_losses",
    "icc_largest_unique_number",
    "icc_maximum_number_of_balloons",
    "p49_group_anagrams",
    "p2260_minimum_consecutive_cards_to_pick_up",
    "p2342_max_sum_of_a_pair_with_equal_sum_of_digits",
    "p2352_equal_row_and_column_pairs",
    "icc_ransom_note",
    "icc_jewels_and_stones",
    "icc_longest_substring_without_repeating_characters",
    "icc_middle_of_the_linked_list",
    "icc_remove_duplicates_from_sorted_list",
    "p24_swap_nodes_in_pairs",
    "p2130_maximum_twin_sum_of_a_linked_list",
]
